--- a/sample01/css/style.css
+++ b/sample01/css/style.css
@@ -21,6 +21,7 @@ input{
   font-size: 1.2em;
   width: 100%;
   padding: 8px;
+  margin: 10px auto;
 }
 
 button{
@@ -31,4 +32,24 @@ button{
   border: 0;
   border-radius: 3px;
   box-shadow: 0 0 8px rgba(0, 0, 0, .4);
+}
+
+.required{
+  color: #f33;
+  font-size: .9em;
+  padding: 3px;
+  background: #fee;
+  font-weight: bold;
+}
+body{
+  background: #fafafa;
+}
+
+.control{
+  margin-bottom: 3em;
+}
+
+label{
+  display: block;
+  margin-bottom: .5em;
 }
